[gd_scene load_steps=22 format=3 uid="uid://dwi6nplfjjxtu"]

[ext_resource type="Script" path="res://framework/scripts/launch/roles.gd" id="1_txevj"]
[ext_resource type="AudioStream" uid="uid://jweokr186bpu" path="res://framework/statics/musics/launch_login.wav" id="2_gbjyi"]
[ext_resource type="Texture2D" uid="uid://dod2e70888b7" path="res://framework/statics/scenes/launch/roles/roles.png" id="3_khr8p"]
[ext_resource type="Texture2D" uid="uid://b7t5sb1nlfm7t" path="res://framework/statics/scenes/launch/roles/start_background.png" id="4_wpp1t"]
[ext_resource type="PackedScene" uid="uid://y4tq0q7gv4im" path="res://framework/scenes/launch/node/role/create.tscn" id="4_ycujo"]
[ext_resource type="Texture2D" uid="uid://dj4xwniefgxbq" path="res://framework/statics/scenes/launch/roles/start_button_0.png" id="5_66nb2"]
[ext_resource type="PackedScene" uid="uid://v1xajsv55en2" path="res://framework/scenes/launch/node/role/list.tscn" id="5_a0l0a"]
[ext_resource type="Texture2D" uid="uid://ourqe47e6hap" path="res://framework/statics/scenes/launch/roles/start_button_1.png" id="6_hmoen"]
[ext_resource type="Texture2D" uid="uid://bmeenxxqmf7o8" path="res://framework/statics/scenes/launch/roles/start_button_2.png" id="7_qxh16"]
[ext_resource type="Texture2D" uid="uid://cuhxcalgkg1gv" path="res://framework/statics/scenes/launch/roles/return_button_0.png" id="8_gyqld"]
[ext_resource type="Texture2D" uid="uid://htaiwmrtlxwo" path="res://framework/statics/scenes/launch/roles/return_button_1.png" id="9_8ma3l"]
[ext_resource type="Texture2D" uid="uid://p2m0osrl5pb3" path="res://framework/statics/scenes/launch/roles/return_button_2.png" id="10_kuv27"]
[ext_resource type="Texture2D" uid="uid://ldlh2hqc4qhd" path="res://framework/statics/scenes/launch/roles/create_button_0.png" id="11_6m2dc"]
[ext_resource type="Texture2D" uid="uid://bu6rghkb7i0ta" path="res://framework/statics/scenes/launch/roles/create_button_1.png" id="12_w43ph"]
[ext_resource type="Texture2D" uid="uid://dnownbkxjawd7" path="res://framework/statics/scenes/launch/roles/create_button_2.png" id="13_r48ur"]
[ext_resource type="Texture2D" uid="uid://c5est4yp3yocx" path="res://framework/statics/scenes/launch/roles/restore_button_0.png" id="14_id7oa"]
[ext_resource type="Texture2D" uid="uid://ctdderspdb5lw" path="res://framework/statics/scenes/launch/roles/restore_button_1.png" id="15_yk0jp"]
[ext_resource type="Texture2D" uid="uid://0x15hy87v7hv" path="res://framework/statics/scenes/launch/roles/restore_button_2.png" id="16_u7box"]
[ext_resource type="Texture2D" uid="uid://bm8yafdcmxjgw" path="res://framework/statics/scenes/launch/roles/delete_button_0.png" id="17_gc6uh"]
[ext_resource type="Texture2D" uid="uid://lm3rngcyngdu" path="res://framework/statics/scenes/launch/roles/delete_button_1.png" id="18_oa0ep"]
[ext_resource type="Texture2D" uid="uid://b3rl7th14f47a" path="res://framework/statics/scenes/launch/roles/delete_button_2.png" id="19_geosi"]

[node name="Role" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_txevj")
metadata/_edit_vertical_guides_ = [640.0]

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_gbjyi")
volume_db = -20.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_khr8p")
expand_mode = 2
stretch_mode = 6

[node name="Mask" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Mask"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Node" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 641.0
offset_top = 365.0
offset_right = 641.0
offset_bottom = 365.0

[node name="Create" parent="Node" instance=ExtResource("4_ycujo")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="List" parent="Node" instance=ExtResource("5_a0l0a")]
layout_mode = 1

[node name="Start" type="Control" parent="."]
anchors_preset = 0
offset_left = 640.0
offset_top = 723.0
offset_right = 640.0
offset_bottom = 723.0

[node name="Background" type="TextureRect" parent="Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -128.0
offset_right = 146.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_wpp1t")

[node name="StartButton" type="TextureButton" parent="Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.5
offset_top = -120.0
offset_right = 135.5
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
texture_normal = ExtResource("5_66nb2")
texture_pressed = ExtResource("6_hmoen")
texture_hover = ExtResource("7_qxh16")
texture_disabled = ExtResource("5_66nb2")

[node name="Right" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="ReturnButton" type="TextureButton" parent="Right"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -356.0
offset_top = 179.0
offset_right = -133.0
offset_bottom = 240.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("8_gyqld")
texture_pressed = ExtResource("9_8ma3l")
texture_hover = ExtResource("10_kuv27")

[node name="CreateButton" type="TextureButton" parent="Right"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 8.0
offset_right = -38.0
offset_bottom = 62.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("11_6m2dc")
texture_pressed = ExtResource("12_w43ph")
texture_hover = ExtResource("13_r48ur")
texture_disabled = ExtResource("11_6m2dc")

[node name="RestoreButton" type="TextureButton" parent="Right"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 62.0
offset_right = -58.0
offset_bottom = 116.0
grow_horizontal = 0
grow_vertical = 2
disabled = true
texture_normal = ExtResource("14_id7oa")
texture_pressed = ExtResource("15_yk0jp")
texture_hover = ExtResource("16_u7box")
texture_disabled = ExtResource("14_id7oa")

[node name="DeleteButton" type="TextureButton" parent="Right"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -340.0
offset_top = 116.0
offset_right = -78.0
offset_bottom = 170.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("17_gc6uh")
texture_pressed = ExtResource("18_oa0ep")
texture_hover = ExtResource("19_geosi")
texture_disabled = ExtResource("17_gc6uh")

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
[connection signal="pressed" from="Start/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Right/ReturnButton" to="." method="_on_return_button_pressed"]
